--- a/.gitignore
+++ b/.gitignore
@@ -132,10 +132,5 @@ dmypy.json
 TODO.md
 
 data/raw
-data/files/2014
-data/files/2015
-data/files/2016
-data/files/2017
-data/files/2018
-data/files/2019
+data/files/
 *.pickle
